--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port $PORT"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
