--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "vite-react-typescript-starter",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "start": "vite preview --host 0.0.0.0 --port $PORT"
-
-
-  },
-  "engines": {
-    "node": "20.x"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
@@ -23,7 +18,8 @@
     "lucide-react": "^0.533.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
